updated situationtemplate.js
