# Situationsverwaltung/api/swagger/swagger.yaml
@@ -457,7 +457,7 @@ paths:
       tags:
         - thing
       summary: Save thing
-      description: Save things in the database
+      description: Save things in the database. Field "location" uses GeoJSON. Only use value of GeoJSON field "geometry"
       operationId: saveThing
       # used as the method name of the controller
       parameters:
@@ -655,41 +655,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   
-  /situationtemplates/{ID}:
-    x-swagger-router-controller: situationtemplate
-    post:
-      tags:
-        - situation template
-      summary: Set XML of situation template
-      description: Set or update the XML data of a situation templte
-      operationId: updateXML
-      
-      parameters:
-        - name: ID
-          in: path
-          description: XML data
-          required: true
-          type: string
-    
-        - in: body
-          name: xml
-          description: XML of the situation template
-          required: true
-          schema:
-            $ref: "#/definitions/XMLModel"
 
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/GetModel"
-        # responses may fall through to errors
-        "404":
-          description: Not found
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-         
   /situationtemplates/ByID:
     x-swagger-router-controller: situationtemplate
     get:
@@ -776,7 +742,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
  
   
-  /situationtemplates/{ID}/{templatename}:
+  /situationtemplates/{ID}:
     x-swagger-router-controller: situationtemplate
     post:
       tags:
@@ -796,11 +762,6 @@ paths:
         required: true
         type: "string"
      
-      - name: "templatename"
-        in: "path"
-        description: "Name of .xml-file"
-        required: true
-        type: "string"
 
       - in: "formData"
         #description: "Additional data to pass to server"
@@ -862,7 +823,7 @@ paths:
         - in: body
           name: body
           description: input
-          required: false
+          required: true
           schema:
             $ref: "#/definitions/SituationtemplateModel"
           
@@ -1117,10 +1078,13 @@ definitions:
     required:
       - name
       - situation
+      - xml
     properties:
       name:
         type: string
       situation:
+        type: string
+      xml:
         type: string
       description:
         type: string
@@ -1178,13 +1142,7 @@ definitions:
         type: number
         format: float
         
-  XMLModel:
-    required:
-      - xml
-    properties:
-      xml:
-        type: string
-        
+
 
         
         
